# Dati-Server

./: CMakeLists.txt  Dati  README.md  configuration.json
core/: main.c
include/: buffer.h  byte_buffer.h  comparator.h  container.h  converter.h  database.h  decimal.h  error_code.h  list.h  message_parser.h  node.h  scheduler.h  server.h  shell.h  tree.h  utils.h  variable.h
network/: buffer.c  buffer.h  error_code.c  message_parser.c  message_parser.h  server.c  server.h
shell/: shell.c
src/buffer/: byte_buffer.c
src/comparator/: comparaor.c
src/converter/: converter.c
src/core/: main.c
src/database/: database.c
src/list/: list.c
src/network/: buffer.c  message_parser.c  server.c
src/shell/: shell.c
src/timer/: scheduler.c
src/tree/: tree.c
src/utils/: decimal.c  utils.c
utils/: buffer.c  buffer.h  utils.c  utils.h
